<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.pdx.cecs.orcyclesensors.MainActivity" >

    <item
        android:id="@+id/action_add_device"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_add_device"/>
    
    <item
        android:id="@+id/action_delete_devices"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/action_delete_devices"/>
    
    <item
        android:id="@+id/action_edit_sensors"
        android:orderInCategory="111"
        android:showAsAction="never"
        android:title="@string/action_edit_sensors"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="120"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
</menu>
