<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="1dp"
    android:background="#fcfcfc"
    android:orientation="vertical"
    android:paddingBottom="4dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="12dp" >
     
     <CheckBox
         android:id="@+id/chk_ssli_select"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:textSize="16sp"
         android:textStyle="bold" />
     
    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/chk_ssli_select"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/chk_ssli_select"
        android:layout_toRightOf="@id/chk_ssli_select"
        android:text="@string/asd_tv_default_name"
        android:textSize="16sp"
        android:textStyle="bold" />

	<TextView
	    android:id="@+id/tv_ssli_label_sensor_type"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignStart="@+id/text1"
	    android:layout_below="@+id/text1"
	    android:layout_marginEnd="4dp"
	    android:layout_marginTop="8dp"
	    android:text="@string/asd_tv_label_sensor_type"
	    android:textAppearance="?android:attr/textAppearanceMedium"
	    android:textSize="16sp"
	    android:textStyle="bold" />
    
    <TextView
         android:id="@+id/text2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
		android:layout_alignBaseline="@id/tv_ssli_label_sensor_type"
		android:layout_toEndOf="@id/tv_ssli_label_sensor_type"
		android:layout_alignParentEnd="true"
         android:layout_marginTop="2dp"
         android:text="@string/asd_tv_default_type"
         android:textSize="16sp" />

	<TextView
	    android:id="@+id/tv_ssli_label_sensor_rate"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignStart="@+id/tv_ssli_label_sensor_type"
	    android:layout_below="@+id/tv_ssli_label_sensor_type"
	    android:layout_marginTop="4dp"
	    android:text="@string/asd_tv_label_sensor_rate"
	    android:textAppearance="?android:attr/textAppearanceMedium"
	    android:textSize="16sp"
	    android:textStyle="bold" />

	<Spinner
		android:id="@+id/spn_ssli_sensor_rate"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBaseline="@id/tv_ssli_label_sensor_rate"
		android:layout_toEndOf="@id/tv_ssli_label_sensor_rate"
		android:entries="@array/asd_spn_sensor_rates"
		android:textSize="16sp" 
		android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
