<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:layout_marginTop="1dp"
	android:background="#fcfcfc"
	android:orientation="vertical"
	android:paddingBottom="4dp"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="12dp" >

	<TextView
		android:id="@+id/text1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:layout_alignParentTop="true"
		android:layout_alignParentRight="true"
		android:layout_alignParentEnd="true"
        android:text="@string/asd_tv_default_name"
		android:textSize="16sp"
		android:textStyle="bold" 
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:textColor="@color/psu_sienna" />

	<TextView
        android:id="@+id/tv_label_sensor_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:layout_below="@+id/text1"
        android:layout_marginRight="4dp"
        android:layout_marginEnd="4dp"
        android:text="@string/asd_tv_label_sensor_type"
        android:textSize="16sp"
		android:textStyle="bold" 
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:textColor="@color/psu_sienna"  />

	<TextView
		android:id="@+id/text2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBaseline="@id/tv_label_sensor_type"
		android:layout_toRightOf="@id/tv_label_sensor_type"
		android:layout_toEndOf="@id/tv_label_sensor_type"
		android:layout_alignParentRight="true"
		android:layout_alignParentEnd="true"
		android:textSize="16sp" 
		android:textAppearance="?android:attr/textAppearanceSmall" />

	<TextView
        android:id="@+id/tv_label_sensor_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:layout_below="@+id/tv_label_sensor_type"
        android:layout_marginRight="4dp"
        android:layout_marginEnd="4dp"
        android:text="@string/asd_tv_label_sensor_rate"
        android:textSize="16sp"
		android:textStyle="bold" 
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:textColor="@color/psu_sienna"  />

	<TextView
		android:id="@+id/text3"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBaseline="@id/tv_label_sensor_rate"
		android:layout_toRightOf="@id/tv_label_sensor_rate"
		android:layout_toEndOf="@id/tv_label_sensor_rate"
		android:layout_alignParentRight="true"
		android:layout_alignParentEnd="true"
		android:textSize="16sp" 
		android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
